add all slidebar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,84 @@
     <title>Admin Dashboard</title>
     <!-- Here is css link -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Google font Icon -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <!-- Font-awesome link -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <!-- Favicon Icon-->
+    <link rel="shortcut icon" type="image/jpg" href="images/facebook.png" />
 </head>
 <body>
+    <section>
+        <div class="container">
+            <aside>
+                <div class="top">
+                    <div class="logo">
+                        <img src="images/dashboard.png">
+                        <h2>EGA <span class="danger">TOR</span></h2>
+                    </div>
+                    <div class="closed">
+                        <span class="material-icons">
+                            close
+                        </span>
+                    </div>
+                </div>
 
+                <div class="slideBar">
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Dashboard</h3>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Customers</h3>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Orders</h3>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Analytics</h3>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Messages</h3>
+                        <span class="message-count">25</span>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Products</h3>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Reports</h3>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Setting</h3>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Add Products</h3>
+                    </a>
+
+                    <a href="#">
+                        <span class="material-icons"> grid_view</span>
+                        <h3>Logout</h3>
+                    </a>
+                </div>
+            </aside>
+        </div>
+    </section>
 </body>
 </html>
