add all icon in slidebar

--- a/index.html
+++ b/index.html
@@ -38,48 +38,48 @@
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons"> people</span>
                         <h3>Customers</h3>
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons">receipt_long</span>
                         <h3>Orders</h3>
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons"> insights</span>
                         <h3>Analytics</h3>
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons"> email</span>
                         <h3>Messages</h3>
                         <span class="message-count">25</span>
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons"> inventory</span>
                         <h3>Products</h3>
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons"> report_gmailerrorred</span>
                         <h3>Reports</h3>
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons"> settings</span>
                         <h3>Setting</h3>
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons"> add</span>
                         <h3>Add Products</h3>
                     </a>
 
                     <a href="#">
-                        <span class="material-icons"> grid_view</span>
+                        <span class="material-icons"> logout</span>
                         <h3>Logout</h3>
                     </a>
                 </div>
