working css file

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                     <div class="logo">
                         <img src="images/dashboard.png">
                         <h2>EGA <span class="danger">TOR</span></h2>
-                    </div>
-                    <div class="closed">
-                        <span class="material-icons">
-                            close
-                        </span>
+                        <div class="closed">
+                            <span class="material-icons">
+                                close
+                            </span>
+                        </div>
                     </div>
                 </div>
 
@@ -86,5 +86,10 @@
             </aside>
         </div>
     </section>
+
+
+
+    <!-- Here is js file link -->
+    <script src="js/script.js"></script>
 </body>
 </html>
