complete sidebar section styling css

--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
                     <div class="logo">
                         <img src="images/dashboard.png">
                         <h2>EGA <span class="danger">TOR</span></h2>
-                        <div class="closed">
-                            <span class="material-icons">
-                                close
-                            </span>
-                        </div>
+                    </div>
+
+                    <div class="close" id="close-btn">
+                        <span class="material-icons">
+                            close
+                        </span>
                     </div>
                 </div>
 
-                <div class="slideBar">
+                <div class="sidebar">
                     <a href="#">
                         <span class="material-icons"> grid_view</span>
                         <h3>Dashboard</h3>
