working start main section in dashboard

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <section>
         <div class="container">
+            <!-- Here is start ASIDE section -->
             <aside>
                 <div class="top">
                     <div class="logo">
@@ -85,6 +86,20 @@
                     </a>
                 </div>
             </aside>
+            <!-- Here is end ASIDE SECTION -->
+
+
+            <main>
+                <h1>Dashboard</h1>
+                <div class="date">
+                    <input type="date">
+                </div>
+                <div class="insights">
+                    <div class="sales">
+                        
+                    </div>
+                </div>
+            </main>
         </div>
     </section>
 
