--- a/index.html
+++ b/index.html
@@ -95,9 +95,72 @@
                     <input type="date">
                 </div>
                 <div class="insights">
+                    <!-- Here is start sales section -->
                     <div class="sales">
-                        
+                        <span class="material-icons-sharp">Analytics</span>
+                        <div class="middle">
+                            <div class="left">
+                                <h3>Total Sales</h3>
+                                <h1>$20,500</h1>
+                            </div>
+                            <div class="progress">
+                                <svg>
+                                    <circle cx='38' cy='38' r='36'>
+
+                                    </circle>
+                                </svg>
+                                <div class="number">
+                                    <p>80%</p>
+                                </div>
+                            </div>
+                        </div>
+                        <small class="text-muted">Last 24 Hours</small>
                     </div>
+                    <!-- Here is end sales section -->
+                    <!-- Here is start sales section -->
+                    <div class="sales">
+                        <span class="material-icons-sharp">Analytics</span>
+                        <div class="middle">
+                            <div class="left">
+                                <h3>Total Sales</h3>
+                                <h1>$20,500</h1>
+                            </div>
+                            <div class="progress">
+                                <svg>
+                                    <circle cx='38' cy='38' r='36'>
+
+                                    </circle>
+                                </svg>
+                                <div class="number">
+                                    <p>80%</p>
+                                </div>
+                            </div>
+                        </div>
+                        <small class="text-muted">Last 24 Hours</small>
+                    </div>
+                    <!-- Here is end sales section -->
+                    <!-- Here is start sales section -->
+                    <div class="sales">
+                        <span class="material-icons-sharp">Analytics</span>
+                        <div class="middle">
+                            <div class="left">
+                                <h3>Total Sales</h3>
+                                <h1>$20,500</h1>
+                            </div>
+                            <div class="progress">
+                                <svg>
+                                    <circle cx='38' cy='38' r='36'>
+
+                                    </circle>
+                                </svg>
+                                <div class="number">
+                                    <p>80%</p>
+                                </div>
+                            </div>
+                        </div>
+                        <small class="text-muted">Last 24 Hours</small>
+                    </div>
+                    <!-- Here is end sales section -->
                 </div>
             </main>
         </div>
