almost finished sales,income,expenses section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="insights">
                     <!-- Here is start sales section -->
                     <div class="sales">
-                        <span class="material-icons-sharp">Analytics</span>
+                        <span><i class="fas fa-acorn"></i></span>
                         <div class="middle">
                             <div class="left">
                                 <h3>Total Sales</h3>
@@ -117,12 +117,13 @@
                         <small class="text-muted">Last 24 Hours</small>
                     </div>
                     <!-- Here is end sales section -->
-                    <!-- Here is start sales section -->
-                    <div class="sales">
-                        <span class="material-icons-sharp">Analytics</span>
+
+                    <!-- Here is start Expenses section -->
+                    <div class="expenses">
+                        <span><i class="fas fa-acorn"></i></span>
                         <div class="middle">
                             <div class="left">
-                                <h3>Total Sales</h3>
+                                <h3>Total Expenses</h3>
                                 <h1>$20,500</h1>
                             </div>
                             <div class="progress">
@@ -138,14 +139,15 @@
                         </div>
                         <small class="text-muted">Last 24 Hours</small>
                     </div>
-                    <!-- Here is end sales section -->
-                    <!-- Here is start sales section -->
-                    <div class="sales">
-                        <span class="material-icons-sharp">Analytics</span>
+                    <!-- Here is end Expenses section -->
+
+                    <!-- Here is start income section -->
+                    <div class="income">
+                        <span><i class="fas fa-acorn"></i></span>
                         <div class="middle">
                             <div class="left">
-                                <h3>Total Sales</h3>
-                                <h1>$20,500</h1>
+                                <h3>Total Income</h3>
+                                <h1>$10,500</h1>
                             </div>
                             <div class="progress">
                                 <svg>
@@ -154,14 +156,15 @@
                                     </circle>
                                 </svg>
                                 <div class="number">
-                                    <p>80%</p>
+                                    <p>40%</p>
                                 </div>
                             </div>
                         </div>
                         <small class="text-muted">Last 24 Hours</small>
                     </div>
-                    <!-- Here is end sales section -->
+                    <!-- Here is end income section -->
                 </div>
+                .
             </main>
         </div>
     </section>
