working recent-order section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,64 @@
                     </div>
                     <!-- Here is end income section -->
                 </div>
-                .
+                <!-- here is recent-order start -->
+                <div class="recent-order">
+                    <h2>Recent Orders</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Product Name</th>
+                                <th>Product Number</th>
+                                <th>Payment</th>
+                                <th>Status</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>foldable mini Drone</td>
+                                <td>85631</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+
+                            <tr>
+                                <td>foldable mini Drone</td>
+                                <td>85631</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+
+                            <tr>
+                                <td>foldable mini Drone</td>
+                                <td>85631</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+
+                            <tr>
+                                <td>foldable mini Drone</td>
+                                <td>85631</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+
+                            <tr>
+                                <td>foldable mini Drone</td>
+                                <td>85631</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <a href="#">Show All</a>
+                </div>
+                <!-- Here is recent-order end -->
             </main>
         </div>
     </section>
