--- a/index.html
+++ b/index.html
@@ -223,6 +223,63 @@
                 </div>
                 <!-- Here is recent-order end -->
             </main>
+
+            <!-- Here is Right side start -->
+            <div class="right">
+                <div class="top">
+                    <button id="menu-btn">
+                        <span><i class="fas fa-bars"></i></span>
+                    </button>
+                    <div class="theme-toggler">
+                        <span><i class="far fa-lightbulb-dollar"></i></span>
+                        <span><i class="fal fa-angle-right"></i></span>
+                    </div>
+                    <div class="profile">
+                        <div class="info">
+                            <p>Hey, <b>Baniel</b></p>
+                            <small class="text-muted">Admin</small>
+                        </div>
+                        <div class="profile-photo">
+                            <img src="images/dashboard.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="recent-updates">
+                    <h2>Recent-Updates</h2>
+                    <div class="updates">
+                        <div class="update">
+                            <div class="profile-photo">
+                                <img src="images/dashboard.png">
+                            </div>
+                            <div class="message">
+                                <p><b>Mike Tyson</b>received his order of Night lion tech GPS drone</p>
+                                <small class="text-muted">2 minutes Ago</small>
+                            </div>
+                        </div>
+
+                        <div class="update">
+                            <div class="profile-photo">
+                                <img src="images/dashboard.png">
+                            </div>
+                            <div class="message">
+                                <p><b>Mike Tyson</b>received his order of Night lion tech GPS drone</p>
+                                <small class="text-muted">2 minutes Ago</small>
+                            </div>
+                        </div>
+
+                        <div class="update">
+                            <div class="profile-photo">
+                                <img src="images/dashboard.png">
+                            </div>
+                            <div class="message">
+                                <p><b>Mike Tyson</b>received his order of Night lion tech GPS drone</p>
+                                <small class="text-muted">2 minutes Ago</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Here is Right side end -->
         </div>
     </section>
 
