--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <span><i class="fas fa-bars"></i></span>
                     </button>
                     <div class="theme-toggler">
-                        <span><i class="far fa-lightbulb-dollar"></i></span>
+                        <span class="active"><i class="far fa-lightbulb-dollar"></i></span>
                         <span><i class="fal fa-angle-right"></i></span>
                     </div>
                     <div class="profile">
@@ -274,6 +274,59 @@
                             <div class="message">
                                 <p><b>Mike Tyson</b>received his order of Night lion tech GPS drone</p>
                                 <small class="text-muted">2 minutes Ago</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sales-analytics">
+                    <h2>Sales Analytics</h2>
+                    <div class="item online">
+                        <div class="icon">
+                            <span><i class="fal fa-shopping-cart"></i></span>
+                        </div>
+                        <div class="right">
+                            <div class="info">
+                                <h3>Online Orders</h3>
+                                <small class="text-muted">Last 24 Hours</small>
+                            </div>
+                            <h5 class="success">+39%</h5>
+                            <h3>3849</h3>
+                        </div>
+                    </div>
+
+                    <div class="item offline">
+                        <div class="icon">
+                            <span><i class="fal fa-shopping-cart"></i></span>
+                        </div>
+                        <div class="right">
+                            <div class="info">
+                                <h3>Offline Orders</h3>
+                                <small class="text-muted">Last 24 Hours</small>
+                            </div>
+                            <h5 class="danger"> -17%</h5>
+                            <h3>1100</h3>
+                        </div>
+                    </div>
+
+                    <div class="item customers">
+                        <div class="icon">
+                            <span><i class="fal fa-shopping-cart"></i></span>
+                        </div>
+                        <div class="right">
+                            <div class="info">
+                                <h3>New Customers</h3>
+                                <small class="text-muted">Last 24 Hours</small>
+                            </div>
+                            <h5 class="success">+25%</h5>
+                            <h3>849</h3>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item add-product">
+                            <div>
+                                <span><i class="fal fa-share"></i>Add</span>
+                                <h3>Add Product</h3>
                             </div>
                         </div>
                     </div>
