--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- Favicon Icon-->
     <link rel="shortcut icon" type="image/jpg" href="images/facebook.png" />
+    <!-- Here is Media Queries file link -->
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <section>
