working js file

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <!-- <tr>
                                 <td>foldable mini Drone</td>
                                 <td>85631</td>
                                 <td>Due</td>
@@ -218,7 +218,7 @@
                                 <td>Due</td>
                                 <td class="warning">Pending</td>
                                 <td class="primary">Details</td>
-                            </tr>
+                            </tr> -->
                         </tbody>
                     </table>
                     <a href="#">Show All</a>
@@ -238,7 +238,7 @@
                     </div>
                     <div class="profile">
                         <div class="info">
-                            <p>Hey, <b>Baniel</b></p>
+                            <p>Hey, <b>Kazi Riyad</b></p>
                             <small class="text-muted">Admin</small>
                         </div>
                         <div class="profile-photo">
@@ -254,7 +254,7 @@
                                 <img src="images/dashboard.png">
                             </div>
                             <div class="message">
-                                <p><b>Mike Tyson</b>received his order of Night lion tech GPS drone</p>
+                                <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone</p>
                                 <small class="text-muted">2 minutes Ago</small>
                             </div>
                         </div>
@@ -264,7 +264,7 @@
                                 <img src="images/dashboard.png">
                             </div>
                             <div class="message">
-                                <p><b>Mike Tyson</b>received his order of Night lion tech GPS drone</p>
+                                <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone</p>
                                 <small class="text-muted">2 minutes Ago</small>
                             </div>
                         </div>
@@ -274,7 +274,7 @@
                                 <img src="images/dashboard.png">
                             </div>
                             <div class="message">
-                                <p><b>Mike Tyson</b>received his order of Night lion tech GPS drone</p>
+                                <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone</p>
                                 <small class="text-muted">2 minutes Ago</small>
                             </div>
                         </div>
@@ -342,5 +342,7 @@
 
     <!-- Here is js file link -->
     <script src="js/script.js"></script>
+    <script src="js/order.js"></script>
+
 </body>
 </html>
