add recent orders in javascript

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             <small class="text-muted">Admin</small>
                         </div>
                         <div class="profile-photo">
-                            <img src="images/dashboard.png">
+                            <img src="images/riyad.jpeg">
                         </div>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                     <div class="item">
                         <div class="item add-product">
                             <div>
-                                <span><i class="fal fa-share"></i>Add</span>
+                                <span><i class="fal fa-share"></i></span>
                                 <h3>Add Product</h3>
                             </div>
                         </div>
