--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="top">
                     <div class="logo">
                         <img src="images/dashboard.png">
-                        <h2>EGA <span class="danger">TOR</span></h2>
+                        <h2>Admin <span class="danger">Account</span></h2>
                     </div>
 
                     <div class="close" id="close-btn">
